[project]
name = "streamstofiles"
version = "0.1.0"
description = "Convert YouTube playlists to MP3 files with ID3 tags and m3u playlists"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "click>=8.1.0",
    "mutagen>=1.47.0",
]

[project.scripts]
streamstofiles = "streamstofiles.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamstofiles"]
